# 3D-Rendering-Engine

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
assets/grasses/: Grass_01.mtl
src/: Camera.cpp  Camera.h  Cube.cpp  Glad.h  Ground.cpp  LightSource.cpp  Object.cpp  Object.h  Render.cpp  RotatingShape.cpp  Scene.cpp  Scene.h  Shaders.cpp  Shaders.h  Shape.cpp  SkyBox.cpp  glad.c  main.cpp  passThrough.vtx  render.cpp  render.h  shaders.cpp  shaders.h  transformation.vtx  transformation3d.vtx  triangle.frag  triangle.vtx
src/Objects/: Cube.cpp  LightSource.cpp  Mesh.cpp  Model.cpp  Object.cpp  Object.h  Shape.cpp  SkyBox.cpp  Square.cpp  Terrain.cpp
src/shaders/: basicLighting.frag  cubemap.frag  cubemap.vtx  model.frag  model.vtx  passThrough.frag  passThrough.vtx  passThrough3D.vtx  phongShader.frag  phongShader.vtx  terrain.frag  terrain.vtx  texture.frag  texture.vtx  textureLit.frag  textureLit.vtx
